[gd_scene load_steps=4 format=3 uid="uid://bhyq2i0ddnnm2"]

[ext_resource type="Texture2D" uid="uid://ciqpvl4ibsbdt" path="res://assets/UI/circle.png" id="1_jqkki"]
[ext_resource type="Script" path="res://scene/other/items/flag/flag_area.gd" id="1_trra2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fd0s6"]
radius = 42.0476

[node name="FlagArea" type="Area2D"]
collision_layer = 16
collision_mask = 254
script = ExtResource("1_trra2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fd0s6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.625, 2.625)
texture = ExtResource("1_jqkki")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
